[package]
name = "bno080"
version = "0.1.3"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "BNO080 AHRS driver"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/bno080"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "bno080",
    "ahrs",
    "imu"
]
readme = "README.md"

[dependencies]
embedded-hal = { version = "1.0.0" }
defmt = { version = "0.3.0", optional = true }

[features]
default = []
defmt-03 = ["dep:defmt"]
